tests/frontend/pass/array/array.act
behaviour f of A
interface f(address[2] xs)

returns xs[1]