tests/frontend/fail/array/out_of_bounds_nested.act
constructor of B
interface constructor()

creates

  uint[2][3][5] x := [ [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ],
                       [ [ 0,0 ], [ 0,0 ], [ 0,0 ] ] ]

behaviour f of B
interface f()



storage

  x[1][2][4] => 4
